@@ -18,12 +18,11 @@ package com.lnf.client.service;
 
 import com.google.common.collect.Lists;
 import com.lnf.client.converter.ClientConverter;
+import com.lnf.client.model.Client;
 import com.lnf.client.model.enums.DocumentType;
 import com.lnf.client.repository.ClientRepository;
-import com.lnf.client.model.Client;
 import com.lnf.dto.client.ClientDto;
 import com.lnf.dto.client.ClientOverviewDto;
-import com.lnf.dto.client.ProjectDto;
 import com.lnf.dto.client.ProjectOverviewDto;
 import com.lnf.dto.common.PageRequestDto;
 import com.lnf.exception.LnFBadRequestException;
@@ -36,20 +35,17 @@ import com.lnf.util.specification.SpecificationUtil;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.cache.CacheManager;
-import org.springframework.cache.annotation.CacheEvict;
+import org.springframework.cache.annotation.CachePut;
 import org.springframework.cache.annotation.Cacheable;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Pageable;
-import org.springframework.data.domain.Sort;
+import org.springframework.data.domain.*;
 import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.List;
-import java.util.Objects;
-import java.util.UUID;
+import java.time.LocalDateTime;
+import java.util.*;
 import java.util.function.Function;
+import java.util.stream.Collectors;
 
 @Service
 @Transactional
@@ -71,7 +67,6 @@ public class ClientService implements PaginatedAndSortedService<ClientOverviewDt
      * @return A Page object with clientDtos
      */
     @Override
-    @Cacheable(value = "clients")
     public Page<ClientOverviewDto> findPaginated(final int page, final int size) {
         Page<Client> resultPage = repository.findAll(PageRequest.of(page, size));
         return validateAndGetPages(page, resultPage);
@@ -88,7 +83,6 @@ public class ClientService implements PaginatedAndSortedService<ClientOverviewDt
      * @return A Page object with sorted clientDtos
      */
     @Override
-    @Cacheable(value = "clients")
     public Page<ClientOverviewDto> findPaginatedAndSorted(int page, int size, String sortBy, String sortOrder) {
         final Sort sortInfo = RestUtil.constructSort(sortBy, sortOrder);
         Page<Client> resultPage = repository.findAll(PageRequest.of(page, size, sortInfo));
@@ -103,7 +97,6 @@ public class ClientService implements PaginatedAndSortedService<ClientOverviewDt
      * @return Sorted list of all ClientDto objects.
      */
     @Override
-    @Cacheable(value = "clients")
     public List<ClientOverviewDto> findAllSorted(String sortBy, String sortOrder) {
         final Sort sortInfo = RestUtil.constructSort(sortBy, sortOrder);
         List<Client> entities = Lists.newArrayList(repository.findAll(sortInfo));
@@ -118,7 +111,6 @@ public class ClientService implements PaginatedAndSortedService<ClientOverviewDt
      * @return List of all ClientDto objects.
      */
     @Override
-    @Cacheable(value = "clients")
     public List<ClientOverviewDto> findAll() {
         List<Client> entities = repository.findAll();
         return entities.stream().map(ClientConverter::toMiniTransportModel)
@@ -126,7 +118,6 @@ public class ClientService implements PaginatedAndSortedService<ClientOverviewDt
                 .toList();
     }
 
-    @Cacheable(value = "clients")
     public List<ClientDto> findAll(String search) {
         Specification<Client> specification = buildClientSpecification(search);
         List<Client> entities = repository.findAll(specification);
@@ -136,11 +127,11 @@ public class ClientService implements PaginatedAndSortedService<ClientOverviewDt
     /**
      * Returns clientDto from the clientId. Raises LnFEntityNotFoundException
      * if there is no client with the input clientId
-     *
+
      * @param clientId Client Id
      * @return ClientDto object
      */
-    @Cacheable(value = "clients")
+    @Cacheable(value = "clients",key = "#clientId")
     public ClientDto findByClientId(UUID clientId) {
         Client entity = search(clientId);
         return findClientWithDocument(entity);
@@ -159,13 +150,12 @@ public class ClientService implements PaginatedAndSortedService<ClientOverviewDt
      *
      * @param resource clientDto object
      */
-    @CacheEvict(value = "clients", allEntries = true)
-    public void create(ClientDto resource) {
+    @CachePut(value = "clients", key = "#result.id")
+    public ClientDto create(ClientDto resource) {
         LnFBadRequestException.throwOnCondition(Objects::isNull, resource,
                 "Failed to create Client with null payload");
         Client entity = ClientConverter.toEntityModel(resource);
-        saveEntity(entity);
-        log.debug("Client {} successfully created", entity.getCode());
+        return ClientConverter.toTransportModel(saveAndCacheEntity(entity));
     }
 
     /**
@@ -175,14 +165,24 @@ public class ClientService implements PaginatedAndSortedService<ClientOverviewDt
      * @param resource ClientDto
      */
     @Transactional
-    @CacheEvict(value = "clients", allEntries = true)
-    public void update(UUID clientId, ClientDto resource) {
+    @CachePut(value = "clients",key = "#result.id")
+    public ClientDto update(UUID clientId, ClientDto resource) {
         LnFBadRequestException.throwOnCondition(Objects::isNull, resource,
                 "Failed to update Client with null payload");
         Client entity = search(clientId);
         Client updatedEntity = ClientConverter.toEntityModel(resource, entity);
         saveEntity(updatedEntity);
         log.debug("Client {} successfully updated", clientId);
+        return ClientConverter.toTransportModel(updatedEntity);
+    }
+
+    private Client saveAndCacheEntity(Client entity) {
+        try {
+            return repository.save(entity);
+        } catch (RuntimeException e) {
+            String errorMessage = String.format("Failed to save client [%s]", entity.getCode());
+            throw new LnFException(errorMessage, e);
+        }
     }
 
     /**
@@ -190,7 +190,6 @@ public class ClientService implements PaginatedAndSortedService<ClientOverviewDt
      *
      * @param clientId Client Id
      */
-    @CacheEvict(value = "clients", allEntries = true)
     public void delete(UUID clientId) {
         Client entity = search(clientId);
         List<ProjectOverviewDto> projectList = projectService.findProjectsByClientId(clientId);
@@ -214,8 +213,8 @@ public class ClientService implements PaginatedAndSortedService<ClientOverviewDt
 
     private Page<ClientOverviewDto> validateAndGetPages(int page, Page<Client> resultPage) {
         if (page > resultPage.getTotalPages()) {
-            throw new LnFEntityNotFoundException(String.format("Total number of pages [%d], " +
-                    "requested page [%d] does not exist", resultPage.getTotalPages(), page));
+            throw new LnFEntityNotFoundException(("Total number of pages [%d], " +
+                    "requested page [%d] does not exist").formatted(resultPage.getTotalPages(), page));
         }
         return resultPage.map(ClientConverter::toMiniTransportModel);
     }
@@ -240,9 +239,9 @@ public class ClientService implements PaginatedAndSortedService<ClientOverviewDt
      * @param clientId Client Id
      * @return Client object
      */
-    private Client search(UUID clientId) {
+    public Client search(UUID clientId) {
         return repository.findById(clientId).
-                orElseThrow(() -> new LnFEntityNotFoundException(String.format("Client with id [%s] does not exist", clientId)));
+                orElseThrow(() -> new LnFEntityNotFoundException("Client with id [%s] does not exist".formatted(clientId)));
     }
 
 
@@ -275,6 +274,72 @@ public class ClientService implements PaginatedAndSortedService<ClientOverviewDt
 
     private Class<?> getFieldClassFromClient(String fieldName) {
         return SpecificationUtil.getFieldClass(Client.class, fieldName);
+    }
+
+    public void deleteLastUploadFile() {
+        List<Client> client = repository.findByUploadedTime();
+        repository.deleteAll(client);
+    }
+
+    public void deleteClientList(List<UUID> clientIds) {
+        List<Client> clientList = clientIds.stream()
+                .map(id -> repository.findById(id)
+                        .orElseThrow(() -> new LnFException("Client not found for id: " + id)))
+                .toList();
+        repository.deleteAll(clientList);
+    }
+
+    public Page<ClientDto> getLastUploadData(PageRequestDto pageRequest) {
+        Pageable pageable = createPageable(pageRequest);
+        List<Client> entities = repository.findByUploadedTime();
+        return paginateClientDetails(convertToDtos(entities), pageable);
+    }
+
+    private Pageable createPageable(PageRequestDto pageRequest) {
+        return PageRequest.of(
+                pageRequest.getPage(),
+                pageRequest.getSize(),
+                RestUtil.constructSort(pageRequest.getSortBy(), pageRequest.getSortOrder())
+        );
+    }
+
+    private Page<ClientDto> paginateClientDetails(List<ClientDto> clientDtos, Pageable pageable) {
+        int totalRecords = clientDtos.size();
+        int start = pageable.getPageSize() * pageable.getPageNumber();
+        int end = Math.min(start + pageable.getPageSize(), totalRecords);
+        List<ClientDto> paginatedClientDetails = clientDtos.subList(start, end);
+
+        return new PageImpl<>(paginatedClientDetails, pageable, totalRecords);
+    }
+
+    public List<ClientDto> create(List<ClientDto> resources) {
+        LnFBadRequestException.throwOnCondition(Objects::isNull, resources,
+                "Failed to create Client with null payload");
+        List<Client> entities = resources.stream().map(ClientConverter::toEntityModel).toList();
+        return save(entities);
+    }
+
+    private List<ClientDto> save(List<Client> entities) {
+        Set<String> existingCodes = repository.findAll().stream()
+                .map(Client::getCode).collect(Collectors.toSet());
+
+        List<ClientDto> invalidData = new ArrayList<>();
+        LocalDateTime uploadTime = LocalDateTime.now();
+
+        for (Client client : entities) {
+            if (existingCodes.contains(client.getCode())) {
+                invalidData.add(ClientConverter.toTransportModel(client));
+            } else {
+                try {
+                    client.setUploadTime(uploadTime);
+                    repository.save(client);
+                } catch (RuntimeException e) {
+                    String errorMessage = "Failed to save Projects";
+                    throw new LnFException(errorMessage, e);
+                }
+            }
+        }
+        return invalidData;
     }
 
 }
